# arkos

./: BIBLE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
scripts/: arkos-delegate.sh
src/: main.rs  main.ts  ollama.ts  types.ts
src/acceptance/: index.ts
src/builder/: index.ts
src/evaluator/: index.ts  mod.rs
src/feasibility/: index.ts
src/finalize/: executor.ts  index.ts  types.ts
src/goals/: index.ts
src/kernel/: index.ts  mod.rs
src/memory/: index.ts  mod.rs  project.ts
src/optimizer/: index.ts
src/planner/: index.ts  mod.rs
src/refactor/: index.ts
src/requirements/: index.ts
src/sandbox/: index.ts
src/server/: index.ts
src/simulator/: index.ts  mod.rs
src/solver/: index.ts
src/tools/: context7.ts  embedding_retrieval.ts  git.ts  mod.rs  patcher.ts  repo_map.ts  repo_reader.ts  search.ts  tsc_checker.ts
src/vision/: index.ts  mod.rs
src/workers/: agent.ts  index.ts  mod.rs
