[package]
name = "arkos"
version = "0.1.0"
edition = "2021"
description = "Cognitive AI orchestration engine — local, modular, vision-first"
license = "MIT"

[[bin]]
name = "arkos"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
